syntax = "proto3";

package emp;

service Employee{
    //Create a new Employee Record.
    rpc createEmployee(EmployeeRequest) returns (EmployeeResponse) {}

    // Get the emplyee using uniq employee Id.
    rpc GetEmployee(SingleEmployeeRequest) returns (EmployeeRequest) {}

    // Update Employee Record

    // Delete Employee Record
    rpc UpdateEmployee(EmployeeRequest) returns (EmployeeResponse) {}

    // Delete Employee Record
    rpc DeleteEmployee(SingleEmployeeRequest) returns (EmployeeResponse) {}
}

message EmployeeRequest {
    int32 empID = 1; //uniq employee id.
    string name = 2;
    string email = 3;

    message Address {
        string street = 1;
        string city = 2;
        string state = 3;
        string zip = 4;
    }
    repeated Address addresses = 4;
}

message EmployeeResponse {
    int32 empId = 1;
    bool success = 2;
}

message SingleEmployeeRequest {
    int32 empId = 1;
}

message EmployeeFilter {
    string keyword = 1;
}